# Onitama-Alpha-Zero

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: alpha_zero.rs  convert.rs  main.rs  matrix.rs  mcts.rs  network.rs  rand_game.rs
tensor/: Cargo.toml
tensor/src/: array_init.rs  convolution.rs  convolution_fft.rs  default.rs  display.rs  elementwise.rs  lib.rs  matrix.rs  ml.rs  random.rs  shape.rs  slice.rs  tensor.rs
tensor/src/matrix/: convolution.rs  elementwise.rs  iter.rs  matmul.rs  num_based.rs  random.rs  slice.rs
tensor/src/tensor/: convolution.rs  display.rs  elementwise.rs  random.rs  slice.rs
