[package]
name = "onitama-alpha-zero"
version = "0.1.0"
authors = ["Viliam Vadocz <viliam.vadocz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onitama_move_gen  = { git = "https://github.com/LHolten/onitama" }
tensor = { path = "./tensor" }
rand = "0.8.3"
bincode = "1.3.3"
